# WSIPatcher

./: .gitignore  GLASSCUT_VS_PATHOPATCHER.md  HISTOLAB_ARCHITECTURE.md  HISTOLAB_QUICK_REFERENCE.md  HISTOLAB_USAGE_EXAMPLES.md  HISTOLAB_VS_OTHERS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LIBRARY_ARCHITECTURE.md  PATHOPATCHER_ARCHITECTURE.md  PATHOPATCHER_QUICK_REFERENCE.md  PATHOPATCHER_USAGE_EXAMPLES.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  TILER_IMPLEMENTATION_COMPLETE.md  USAGE_EXAMPLES.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: DATASET_GENERATION.md  STORAGE_GUIDE.md  TILER_GUIDE.md  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/_static/: custom.css  custom.js
docs/_templates/components/: foot-copyright.html
docs/_templates/partials/: extra-head.html  webfonts.html
docs/api/: index.rst
docs/examples/: profile_live_dataset.ipynb
docs/usage/: data.rst  dataset.rst  index.rst  slides.rst  stain_normalization.rst  tiling.rst  tissue_detection.rst
examples/: example_dataset_generation.py
glasscut/: __init__.py  tile.py  utils.py
glasscut/data/: __init__.py  fetcher.py  registry.py
glasscut/dataset/: __init__.py  config.py  generator.py  live.py
glasscut/slides/: __init__.py  slide.py
glasscut/slides/backends/: cucim_backend.py
glasscut/stain_normalizers/: __init__.py  base.py  macenko.py  reinhardt.py
glasscut/storage/: __init__.py  manager.py  structures.py
glasscut/tiler/: __init__.py  base.py  conditional.py  grid.py  random.py
glasscut/tissue_detectors/: __init__.py  otsu.py  otsu_tissue_detector.py
notebooks/doc_images/: generate_doc_images.ipynb
notebooks/examples/: profile_live_dataset.ipynb
