[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glasscut"
version = "0.1.0"
description = "A toolkit for preprocessing and analyzing whole slide images combining approaches from Histolab and PathoPatcher with GPU acceleration via CuCim"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "CamiloSinningUN", email = "camilosinning.cs@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "kaleido>=1.2.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.13.0.92",
    "openslide-bin>=4.0.0.13",
    "openslide-python>=1.4.3",
    "orjson>=3.11.8",
    "plotly>=6.7.0",
    "plotly-stubs>=0.0.6",
    "pooch>=1.9.0",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "glasscut",
    "ipykernel>=7.2.0",
    "line-profiler>=5.0.2",
    "mypy>=1.20.1",
    "nbformat>=5.10.4",
    "pyinstrument>=5.1.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "shibuya>=2026.1.9",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
gpu = [
    "cucim>=23.10.0",
    "cupy-cuda13x>=14.0.1",
]

[project.urls]
Homepage = "https://github.com/CamiloSinningUN/GlassCut"
Source = "https://github.com/CamiloSinningUN/GlassCut"
Documentation = "https://camilosinningun.github.io/GlassCut"
Issues = "https://github.com/CamiloSinningUN/GlassCut/issues"

[tool.hatch.build.targets.wheel]
packages = ["glasscut"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
glasscut = { workspace = true, editable = true }
